<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/text_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    android:background="@color/backgroundWhite"
    android:fitsSystemWindows="false">

    <com.example.alexbanks.cbiapp.input.EditTextCustomInput
        android:id="@+id/new_guest_name_first"
        style="@style/text_user_input"
        android:layout_width="505dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/act3_name_first"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:progressStateVariable="ec_name_first"
        app:variableType="String">
        <requestFocus></requestFocus>
    </com.example.alexbanks.cbiapp.input.EditTextCustomInput>

    <com.example.alexbanks.cbiapp.input.CustomInputRadioTableLayout
        android:id="@+id/customInputRadioGridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/new_guest_name_last"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_guest_name_first"
        app:layout_constraintVertical_bias="0.0"
        app:preferredColumns="3"
        app:progressStateVariable="ec_type"
        app:valueStringArrayResource="@array/act_ec_contact_options"></com.example.alexbanks.cbiapp.input.CustomInputRadioTableLayout>

    <com.example.alexbanks.cbiapp.input.EditTextCustomInput
        android:id="@+id/new_guest_name_last"
        style="@style/text_user_input"
        android:layout_width="503dp"
        android:layout_height="85dp"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/act3_name_last"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName"
        android:textSize="32sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/new_guest_name_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/new_guest_name_first"
        app:layout_constraintTop_toTopOf="@+id/new_guest_name_first"
        app:progressStateVariable="ec_name_last"
        app:variableType="String" />

    <FrameLayout
        android:id="@+id/layout_newguest"
        android:tag="nav_fragment"
        class="com.example.alexbanks.cbiapp.activity.NavButtonGroupFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.alexbanks.cbiapp.keyboard.CustomKeyboardView
        android:id="@+id/customKeyboardView"
        android:layout_width="match_parent"
        android:layout_height="469dp"
        app:layout_constraintBottom_toBottomOf="@+id/layout_newguest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.example.alexbanks.cbiapp.keyboard.CustomKeyboardView>
    <android.inputmethodservice.KeyboardView
        android:id="@+id/custom_keyboard_view_ec_name"
        style="@style/custom_keypad"
        android:layout_width="900dp"
        android:layout_height="500dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"></android.inputmethodservice.KeyboardView>

    <TextView
        android:id="@+id/textView8"
        style="@style/text_title_primary_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="80sp"
        android:text="@string/act_title_ec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>